
    The above also impacts autfilt --included-in option.

  - spot::scc_info has a new option PROCESS_UNREACHABLE_STATES that
    causes it to enumerated even unreachable SCCs.

  - spot::realizability_simplifier is a new class that performs the
    removal of superfluous APs that is now performed by ltlsynt
    (search for --polarity and --global-equivalence above).

  Python:

  - The spot.automata() and spot.automaton() functions now accept a
    drop_false_edges=False argument to disable the historical behavior
    of ignoring edges labeled by False.

  Bugs fixed:

  - tgba_determinize()'s use_simulation option would cause it to
    segfault on automata with more than 2^16 SCCs, due to overflows in
    computations of indices in the reachability matrix for SCCs.
    (Issue #541.)  This has been fixed by disabled the use_simulation
    optimization in this case.

  - product_or_susp() and product_susp() would behave incorrectly in
    presence of unsatisifable or universal acceptance conditions that
    were not f or t.  (Part of issue #546.)

  - Several algorithms were incorrectly dealing with the "!weak"
    property.  Because they (rightly) assumed that a weak input would
    produce a weak output, they also wrongly assumed that a non-weak
    output would produce a non-weak output.  Unfortunately removing
    states or edges in a non-weak automaton can lead a weak automaton.
    The incorrect property lead to issue #546.  In addition to fixing
    several algorithms, product() and print_hoa() will now raise an
    exception if automaton with t or f acceptance is declared !weak.
    (This cheap check will not catch all automata incorrectly labeled
    by !weak, but helps detects some issues nonetheless.)

  - The automaton parser forgot to update the list of highlighted
    edges while dropping edges labeled by bddfalse.  (issue #548.)

New in spot 2.11.6  (2023-08-01)

  Bug fixes:

  - Running command lines such as "autfilt input.hoa -o output-%L.hoa"