@@ -10,6 +10,7 @@ Caroline Lemieux
 Christian Dax
 Christopher Ziegler
 Clément Tamines
+Daniel Stan
 David Dokoupil
 David Müller
 Dávid Smolka
