@@ -108,6 +108,9 @@ New in spot 2.11.6.dev  (not yet released)
     removal of superfluous APs that is now performed by ltlsynt
     (search for --polarity and --global-equivalence above).
 
+  - ltsmin's interface will now point to README.ltsmin in case an
+    error is found while running divine or spins.
+
   Python:
 
   - The spot.automata() and spot.automaton() functions now accept a
